# dm-api-gitlab

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  bot.py  mypy.ini  pyproject.toml  swagger-coverage-config-dm-api-account.json  telegram-notifier-config.ini
.github/workflows/: python.yaml
checkers/: get_v1_account.py  http_checkers.py  post_v1_account.py
config/: stg.yaml
dm_api_account/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py
dm_api_account/.openapi-generator/: FILES
dm_api_account/dm_api_account/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
dm_api_account/docs/: AccountApi.md  BadRequestError.md  BbParseMode.md  ChangeEmail.md  ChangePassword.md  ColorSchema.md  GeneralError.md  InfoBbText.md  LoginApi.md  LoginCredentials.md  PagingSettings.md  Rating.md  Registration.md  ResetPassword.md  User.md  UserDetails.md  UserDetailsEnvelope.md  UserEnvelope.md  UserRole.md  UserSettings.md
dm_api_account/test/: test_account_api.py  test_bad_request_error.py  test_bb_parse_mode.py  test_change_email.py  test_change_password.py  test_color_schema.py  test_general_error.py  test_info_bb_text.py  test_login_api.py  test_login_credentials.py  test_paging_settings.py  test_rating.py  test_registration.py  test_reset_password.py  test_user.py  test_user_details.py  test_user_details_envelope.py  test_user_envelope.py  test_user_role.py  test_user_settings.py
helpers/: account_helper.py
services/: api_mailhog.py  dm_api_account.py
tests/: conftest.py
tests/functional/: __init__.py
(+41 files in other folders)
